# SortingAlgorithms

./: CMakeLists.txt  README.md  eval  main.cpp
lib/: algor.hpp  bubble_sort.cpp  bucket_sort.cpp  insertion_sort.cpp  merge_sort.cpp  quick_sort.cpp  utils.cpp  utils.hpp
